--- a/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/HealthEduList.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/HealthEduList.razor
@@ -2,9 +2,27 @@
 
 @rendermode InteractiveAuto
 
+<style>
+    .table-scroll {
+        width: 100%;
+        overflow-x: auto;
+    }
+
+        .table-scroll th,
+        .table-scroll td {
+            white-space: normal; /* 允許文字折行 */
+            overflow: hidden; /* 超出部分隱藏 */
+            text-overflow: ellipsis; /* 顯示省略號 */
+        }
+
+        .table-scroll img {
+            max-width: 100px; /* 圖片最大寬度 */
+        }
+</style>
+
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div class="card">
                 <div class="card">
                     <div class="card-header">
@@ -14,65 +32,58 @@
                 @if (HealthEdus.Count > 0)
                 {
                     <div class="card-body">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Id</th>
-                                    <th>類別</th>
-                                    <th>主題</th>
-                                    <th>連結</th>
-                                    <th>修改/刪除</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var healthEdu in HealthEdus)
-                                {
+                        <div class="table-scroll">
+                            <table class="table table-striped">
+                                <thead>
                                     <tr>
-                                        <td>@healthEdu.Id</td>
-                                        <td>@healthEdu.Class</td>
-                                        <td>@healthEdu.Title</td>
-                                        <td>
-                                            @{
-                                                var uri = new Uri(healthEdu.Link);
-                                                // 判断链接主机部分是否为 YouTube
-                                                if (uri.Host.Contains("youtube.com"))
-                                                {
-                                                    // 获取视频ID
-                                                    string videoId = GetYouTubeId(healthEdu.Link);
-                                                    if (videoId != null)
+                                        <th style="width: 5%">Id</th>
+                                        <th style="width: 10%">類別</th>
+                                        <th style="width: 20%">主題</th>
+                                        <th style="width: 30%">連結</th>
+                                        <th style="width: 20%">修改/刪除</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var healthEdu in HealthEdus)
+                                    {
+                                        <tr>
+                                            <td>@healthEdu.Id</td>
+                                            <td>@healthEdu.Class</td>
+                                            <td>@healthEdu.Title</td>
+                                            <td>
+                                                @{
+                                                    var uri = new Uri(healthEdu.Link);
+                                                    if (uri.Host.Contains("youtube.com"))
                                                     {
-                                                        // 构建缩略图URL
-                                                        string thumbnailUrl = $"https://img.youtube.com/vi/{videoId}/0.jpg";
-                                                        // 显示缩略图
-                                                        <a href="@healthEdu.Link" target="_blank">
-                                                            <img src="@thumbnailUrl" alt="Video Thumbnail" style="max-width: 100px;">
-                                                        </a>
+                                                        string videoId = GetYouTubeId(healthEdu.Link);
+                                                        if (videoId != null)
+                                                        {
+                                                            string thumbnailUrl = $"https://img.youtube.com/vi/{videoId}/0.jpg";
+                                                            <a href="@healthEdu.Link" target="_blank">
+                                                                <img src="@thumbnailUrl" alt="Video Thumbnail">
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>No Thumbnail</span>
+                                                        }
                                                     }
                                                     else
                                                     {
-                                                        // 如果无法提取视频ID，则显示默认的无图像
-                                                        <span>No Thumbnail</span>
+                                                        <a href="@healthEdu.Link" target="_blank">@healthEdu.Link</a>
                                                     }
                                                 }
-                                                else
-                                                {
-                                                    // 非 YouTube 链接，直接显示超链接
-                                                    <a href="@healthEdu.Link" target="_blank">@healthEdu.Link</a>
-                                                }
-                                            }
-                                        </td>
+                                            </td>
 
-                                        <td>
-                                            <div class="hstack gap-2">
-                                                <button class="btn  btn-info" @onclick="()=>Edit(healthEdu)">修改</button>
-                                                <button class="btn  btn-danger" @onclick="() => Delete(healthEdu.Id)">刪除</button>
-
-                                            </div>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
+                                            <td>
+                                                <button class="btn btn-info" @onclick="()=>Edit(healthEdu)">修改</button>
+                                                <button class="btn btn-danger" @onclick="() => Delete(healthEdu.Id)">刪除</button>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 }
                 else
@@ -85,32 +96,32 @@
 </div>
 
 @code {
-        private List<HealthEdu> HealthEdus { get; set; } = new();
+    private List<HealthEdu> HealthEdus { get; set; } = new();
 
-        private async Task LoadHealthEdus()
-        {
-                var healthEdus = await HealthEduService.GetAllHealthEduAsync();
-                HealthEdus?.Clear();
-                if (HealthEdus is null) return;
-                foreach (var healthEdu in healthEdus)
-                HealthEdus.Add(healthEdu);
-        }
+    private async Task LoadHealthEdus()
+    {
+        var healthEdus = await HealthEduService.GetAllHealthEduAsync();
+        HealthEdus?.Clear();
+        if (HealthEdus is null) return;
+        foreach (var healthEdu in healthEdus)
+            HealthEdus.Add(healthEdu);
+    }
 
 
-        protected override async Task OnInitializedAsync() => await LoadHealthEdus();
+    protected override async Task OnInitializedAsync() => await LoadHealthEdus();
 
-        private void NavigateToAddHealthEduPage() => NavigationManager.NavigateTo("manage-healthEdu");
+    private void NavigateToAddHealthEduPage() => NavigationManager.NavigateTo("manage-healthEdu");
 
-        private void Edit(HealthEdu model)
-        {
-            NavigationManager.NavigateTo($"manage-healthEdu/{model.Id}");
-        }
+    private void Edit(HealthEdu model)
+    {
+        NavigationManager.NavigateTo($"manage-healthEdu/{model.Id}");
+    }
 
-        private async Task Delete(int id)
-        {
-            var healthEdu = await HealthEduService.DeleteHealthEduAsync(id);
-            await LoadHealthEdus();
-        }
+    private async Task Delete(int id)
+    {
+        var healthEdu = await HealthEduService.DeleteHealthEduAsync(id);
+        await LoadHealthEdus();
+    }
 
 
     private string GetYouTubeId(string youtubeUrl)
