--- a/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/ProductList.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/ProductList.razor
@@ -4,14 +4,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
+            <div class="card">
                 <div class="card">
-                    <div class="card">
                     <div class="card-header">
                         <button class="btn btn-primary float-end" @onclick="NavigateToAddProductPage">新增表單</button>
                     </div>
-                    </div>
+                </div>
                 @if (Products.Count > 0)
-                {                  
+                {
                     <div class="card-body">
                         <table class="table table-striped">
                             <thead>
@@ -30,12 +30,16 @@
                                         <td>@product.Id</td>
                                         <td>@product.Name</td>
                                         <td>@product.Number</td>
-                                        <td>@product.AssessmentDate</td>
+                                        <td>
+                                            @if (product.AssessmentDate != null)
+                                            {
+                                                @product.AssessmentDate.Value.ToString("yyyy-MM-dd")
+                                            }
+                                        </td>
                                         <td>
                                             <div class="hstack gap-2">
-                                                <button class="btn  btn-info" @onclick="()=>Edit(product)">修改</button>
-                                                <button class="btn  btn-danger" @onclick="() => Delete(product.Id)">刪除</button>
-
+                                                <button class="btn btn-info" @onclick="()=>Edit(product)">修改</button>
+                                                <button class="btn btn-danger" @onclick="() => Delete(product.Id)">刪除</button>
                                             </div>
                                         </td>
                                     </tr>
