--- a/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/Information.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/Information.razor
@@ -1,5 +1,6 @@
 ﻿@page "/information"
 @inject NavigationManager NavigationManager
+@inject IHealthEduRepository HealthEduService
 @rendermode InteractiveAuto
 
 <div class="container">
