--- a/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/ManageHealthEdu.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD.Client/Pages/ManageHealthEdu.razor
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-8">
             <div class="card">
-                <div class="card-header">新增表單</div>
+                <div class="card-header">新增衛教資訊</div>
                 <div class="card-body">
                     <EditForm Model="HealthEduModel" OnValidSubmit="HandleSave">
                         <DataAnnotationsValidator />
@@ -33,12 +33,12 @@
                 </div>
 
                 <div class="card-footer">
-                        <div>
-                            Id: @ReturnHealthEdu.Id <br />
-                            類別: @ReturnHealthEdu.Class<br />
-                            主題: @ReturnHealthEdu.Title <br />
-                            連結: @ReturnHealthEdu.Link<br />
-                        </div>
+                    <div>
+                        Id: @ReturnHealthEdu.Id <br />
+                        類別: @ReturnHealthEdu.Class<br />
+                        主題: @ReturnHealthEdu.Title <br />
+                        連結: @ReturnHealthEdu.Link<br />
+                    </div>
                 </div>
                 <br />
             </div>
@@ -51,7 +51,7 @@
 
     [Parameter] public int Id { get; set; }
 
-    private HealthEdu ReturnHealthEdu = new HealthEdu();
+    private HealthEdu ReturnHealthEdu { get; set; } = new HealthEdu();
 
 
     private async Task HandleSave()
@@ -60,14 +60,15 @@
         {
             ReturnHealthEdu = await HealthEduService.UpdateHealthEduAsync(HealthEduModel);
             HealthEduModel = new HealthEdu(); // 清空表單數據
+
         }
         else
         {
             ReturnHealthEdu = await HealthEduService.AddHealthEduAsync(HealthEduModel);
-            HealthEduModel = new HealthEdu();
+            HealthEduModel = new HealthEdu(); // 清空表單數據
+
         }
 
-        
         //StateHasChanged(); // 觸發頁面重新渲染
     }
 }
