--- a/DemoBlazorCRUD/DemoBlazorCRUD/Components/Layout/NavMenu.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD/Components/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject NavigationManager Navigation
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">DemoBlazorCRUD</a>
     </div>
@@ -15,28 +17,25 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="product-list">
                 <span class="bi bi-list-nested" aria-hidden="true"></span> 評估表單
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="healthEdu-list">
-                <span class="bi bi-list-nested" aria-hidden="true"></span> 衛教資訊
-            </NavLink>
-        </div>
+        
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="healthEdu-list">
+                    <span class="bi bi-list-nested" aria-hidden="true"></span> 衛教資訊
+                </NavLink>
+            </div>
+       
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Information">
                 <span class="bi bi-list-nested" aria-hidden="true"></span> 資訊查詢
             </NavLink>
         </div>
-        
+
     </nav>
 </div>
+
